<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="8dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster_mov_detail"
                android:contentDescription="@string/postermovie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:layout_margin="5dp"
                android:src="@drawable/image"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_mov_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="20sp" />


            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c8e6c9"
                        android:drawableLeft="@drawable/rate"
                        android:drawableStart="@drawable/rate"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/rating"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/rate_mov_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/rating_film" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c8e6c9"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/event"
                        android:text="@string/rls_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/release_date_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/rls_date" />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c8e6c9"
                        android:padding="10dp"
                        android:text="@string/synopsis"
                        android:drawableLeft="@drawable/synopsis"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/synopsis_mov_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/synopsis_movie" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>